# genetic_algorithms

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: 01_introduction.md  02_core_concepts.md  03_implementation.md  04_examples.md  05_advanced.md
genetic_algorithms/core/: __init__.py  crossover.py  exceptions.py  genetic_algorithm.py  individual.py  logger.py  mutation.py  population.py  selection.py
genetic_algorithms/examples/: knapsack.py  tsp.py
genetic_algorithms/visualization/: __init__.py  demo.py  diversity_analyzer.py  evolution_plotter.py  solution_visualizer.py
tests/: __init__.py  test_examples.py  test_genetic_algorithm.py  test_individuals.py  test_operators.py
